--- a/index.html
+++ b/index.html
@@ -23,12 +23,12 @@
       <div class="d-flex flex-wrap justify-content-center-w-100 p-3 -py-3 mb-4">
         <a
           href="./index.html"
-          class="d-flex align-items-center mb-3 mb-md-0 me-md-auto"
-        >
+          class="d-flex align-items-center mb-3 mb-md-0 me-md-auto">
           <img class="logo"
             src="./Assets/logo.png"
             alt="logo">
         </a>
+        <div class="collapse navbar-collapse" id="navbarNav"></div>
         <ul class="nav nav-pills">
           <li class="nav-item">
             <a href="#" class="btn btn-outline-secondary">Home</a>
@@ -64,7 +64,7 @@
     </header>
     <main class="events">
       <div class="py-4 bg-section-2 d-flex justify-content-between align-items-center">
-        <div class="mx-4" id="categoryCheck">
+        <div class="container d-flex flex-wrap gap-2 justify-content-start ps-4" id="categoryCheck">
             <div class="form-check form-check-inline">
                 <input class="form-check-input" type="checkbox" id="category1" value="Food Fair" checked>
                 <label class="form-check-label" for="category1">Food Fair</label>
