--- a/upcoming.html
+++ b/upcoming.html
@@ -22,30 +22,27 @@
       <div class="d-flex flex-wrap justify-content-center-w-100 p-3 -py-3 mb-4">
         <a
           href="./index.html"
-          class="d-flex align-items-center mb-3 mb-md-0 me-md-auto"
-        >
+          class="d-flex align-items-center mb-3 mb-md-0 me-md-auto">
           <img class="logo"
             src="./Assets/logo.png"
             alt="logo">
         </a>
+        <div class="collapse navbar-collapse" id="navbarNav"></div>
         <ul class="nav nav-pills">
           <li class="nav-item">
             <a href="./index.html" class="btn btn-outline-secondary">Home</a>
           </li>
           <li class="nav-item">
             <a href="#" class="btn btn-outline-secondary"
-              >Upcoming Events</a
-            >
+              >Upcoming Events</a>
           </li>
           <li class="nav-item">
             <a href="./past.html" class="btn btn-outline-secondary"
-              >Past Events</a
-            >
+              >Past Events</a>
           </li>
           <li class="nav-item">
             <a href="./contact.html" class="btn btn-outline-secondary"
-              >Contact Us</a
-            >
+              >Contact Us</a>
           </li>
           <li class="nav-item">
             <a href="./stats.html" class="btn btn-outline-secondary">Stats</a>
@@ -66,39 +63,40 @@
     </header>
     <main class="events">
       <div class="py-4 bg-section-2 d-flex justify-content-between align-items-center">
-        <div class="mx-4" id="categoryCheck">
+        <div class="container d-flex flex-wrap gap-2 justify-content-start ps-4" id="categoryCheck">
             <div class="form-check form-check-inline">
                 <input class="form-check-input" type="checkbox" id="category1" value="Food Fair" checked>
-                <label class="form-check-label" for="category1">Music Concert</label>
+                <label class="form-check-label" for="category1">Food Fair</label>
             </div>
             <div class="form-check form-check-inline">
                 <input class="form-check-input" type="checkbox" id="category2" value="Museum">
-                <label class="form-check-label" for="category2">Book Exchange</label>
+                <label class="form-check-label" for="category2">Museum</label>
             </div>
             <div class="form-check form-check-inline">
                 <input class="form-check-input" type="checkbox" id="category3" value="Costume Party">
-                <label class="form-check-label" for="category3">Cinema</label>
+                <label class="form-check-label" for="category3">Costume Party</label>
             </div>
             <div class="form-check form-check-inline">
                 <input class="form-check-input" type="checkbox" id="category4" value="Music Concert">
-                <label class="form-check-label" for="category4">Museum</label>
+                <label class="form-check-label" for="category4">Music Concert</label>
             </div>
             <div class="form-check form-check-inline">
                 <input class="form-check-input" type="checkbox" id="category5" value="Book Exchange">
-                <label class="form-check-label" for="category5">Food Fair</label>
+                <label class="form-check-label" for="category5">Book Exchange</label>
             </div>
             <div class="form-check form-check-inline">
                 <input class="form-check-input" type="checkbox" id="category6" value="Cinema">
-                <label class="form-check-label" for="category6">Race</label>
+                <label class="form-check-label" for="category6">Cinema</label>
             </div>
             <div class="form-check form-check-inline">
-              <input class="form-check-input" type="checkbox" id="category7" value="option7">
-              <label class="form-check-label" for="category7">Costume Party</label>
+              <input class="form-check-input" type="checkbox" id="category7" value="Race">
+              <label class="form-check-label" for="category7">Race</label>
           </div>
-        </div> 
+        </div>
         <div class="mx-">
             <form class="d-flex" role="search">
                 <input class="form-control me-2" type="search" placeholder="Search">
+                
             </form>
         </div>
     </div>
