--- a/past.html
+++ b/past.html
@@ -64,47 +64,17 @@
       </div>
     </header>
     <main class="events">
-      <div class="py-4 bg-section-2 d-flex justify-content-between align-items-center">
-        <div class="mx-4" id="categoryCheck">
-            <div class="form-check form-check-inline">
-                <input class="form-check-input" type="checkbox" id="category1" value="Food Fair" checked>
-                <label class="form-check-label" for="category1">Music Concert</label>
-            </div>
-            <div class="form-check form-check-inline">
-                <input class="form-check-input" type="checkbox" id="category2" value="Museum">
-                <label class="form-check-label" for="category2">Book Exchange</label>
-            </div>
-            <div class="form-check form-check-inline">
-                <input class="form-check-input" type="checkbox" id="category3" value="Costume Party">
-                <label class="form-check-label" for="category3">Cinema</label>
-            </div>
-            <div class="form-check form-check-inline">
-                <input class="form-check-input" type="checkbox" id="category4" value="Music Concert">
-                <label class="form-check-label" for="category4">Museum</label>
-            </div>
-            <div class="form-check form-check-inline">
-                <input class="form-check-input" type="checkbox" id="category5" value="Book Exchange">
-                <label class="form-check-label" for="category5">Food Fair</label>
-            </div>
-            <div class="form-check form-check-inline">
-                <input class="form-check-input" type="checkbox" id="category6" value="Cinema">
-                <label class="form-check-label" for="category6">Race</label>
-            </div>
-            <div class="form-check form-check-inline">
-              <input class="form-check-input" type="checkbox" id="category7" value="option7">
-              <label class="form-check-label" for="category7">Costume Party</label>
-          </div>
-        </div> 
-        <div class="mx-">
-            <form class="d-flex" role="search">
-                <input class="form-control me-2" type="search" placeholder="Search">
-            </form>
+      <div class="d-flex navbar justify-content-evenly h4 pb-2 mb-4 text-secondary border-bottom border-secondary strong">
+        <div id="inlineCheckbox">
         </div>
+        <form class="d-flex" role="search" id="search-form">
+            <input class="form-control me-1" type="search" placeholder="Search" aria-label="Search">
+        </form>
     </div>
-    <div class="cards">
-      <div id="insertCards" class="row row-cols-1 row-cols-md-2 row-cols-lg-4">
-      </div>
-    </div>
+    <div class="d-flex flex-column justify-content-center">
+        <div class="d-flex flex-wrap justify-content-evenly" id="cardEventsp">
+        </div>
+    </div>   
     </main>
     <footer>
         <div class="d-flex flex-column flex-sm-row justify-content-between py-4 my-4 border-top">
