--- a/stats.html
+++ b/stats.html
@@ -65,77 +65,48 @@
       </div>
     </header>
     <main>
+      <div class="d-flex flex-column justify-content-center my-2">
       <table>
-          <tr class="tabla">
-              <td class="titulo" colspan="3">Events Statistics</td>
-          </tr>
-          <tr class="tabla">
-              <td class="tabla">1</td>
-              <td class="tabla">1</td>
-              <td class="tabla">1</td>
-          </tr>
-          <tr>
-              <td class="tabla">1</td>
-              <td class="tabla">1</td>
-              <td class="tabla">1</td>
-          </tr>
-          <tr>
-              <td class="titulo" colspan="3">Upcoming events statistics by category</td>
-          </tr>
-          <tr>
-              <td class="tabla">1</td>
-              <td class="tabla">1</td>
-              <td class="tabla">1</td>
-          </tr>
-          <tr>
-              <td class="tabla">1</td>
-              <td class="tabla">1</td>
-              <td class="tabla">1</td>
-          </tr>
-          <tr>
-              <td class="tabla">1</td>
-              <td class="tabla">1</td>
-              <td class="tabla">1</td>
-          </tr>
-          <tr>
-              <td class="tabla">1</td>
-              <td class="tabla">1</td>
-              <td class="tabla">1</td>
-          </tr>
-          <tr>
-              <td class="titulo" colspan="3">Past events statistics by category</td>
-          </tr>
-          <tr>
-              <td class="tabla">1</td>
-              <td class="tabla">1</td>
-              <td class="tabla">1</td>
-          </tr>
-          <tr>
-              <td class="tabla">1</td>
-              <td class="tabla">1</td>
-              <td class="tabla">1</td>
-          </tr>
-          <tr>
-              <td class="tabla">1</td>
-              <td class="tabla">1</td>
-              <td class="tabla">1</td>
-          </tr>
-          <tr>
-              <td class="tabla">1</td>
-              <td class="tabla">1</td>
-              <td class="tabla">1</td>
-          </tr>
-          <tr>
-              <td class="tabla">1</td>
-              <td class="tabla">1</td>
-              <td class="tabla">1</td>
-          </tr>
-          <tr>
-              <td class="tabla">1</td>
-              <td class="tabla">1</td>
-              <td class="tabla">1</td>
-          </tr>
-      </table>
+        <tr>
+            <th colspan="3" class="th-c">Events statistics</th>
+        </tr>
+        <tr class="text-center">
+            <th>Events with the highest percentage of attendance</th>
+            <th>Events with the lowest percentage of attendance</th>
+            <th>Events with larger capacity</th>
+        </tr>
+        <tbody id="table1">
+
+        </tbody>
+    </table>
+    <table>
+        <tr>
+            <th colspan="3" class="th-c">Upcoming events statistics by category</th>
+        </tr>
+        <tr class="text-center">
+            <th>Categories</th>
+            <th>Revenues</th>
+            <th>Porcentage of attendance</th>
+        </tr>
+
+        <tbody id="table2">
+
+        </tbody>
+    </table>
+    <table>
+        <tr>
+            <th colspan="3" class="th-c">Past events statistics by category</th>
+        </tr>
+        <tr class="text-center">
+            <th>Categories</th>
+            <th>Revenues</th>
+            <th>Porcentage of attendance</th>
+        </tr>
+        <tbody id="table3">
+
+        </tbody>
+    </table>
+      </div>
   </main>
 
     <footer>
@@ -158,11 +129,9 @@
     
   
 
-
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
-      crossorigin="anonymous"
-    ></script>
+<script src="./Scripts/stats.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
+    crossorigin="anonymous"></script>
   </body>
 </html>
