--- a/details.html
+++ b/details.html
@@ -51,7 +51,7 @@
         </ul>
       </div>
     </header>
-    <main class="d-flex align-items-center justify-content-center py-3" >
+    <main class="d-flex align-items-center justify-content-center py-3" id="details" >
 
     </main>
     <footer>
