--- a/index.html
+++ b/index.html
@@ -62,20 +62,18 @@
         </div>
       </div>
     </header>
-    <main class="events">
-      
-    <div class="d-flex navbar justify-content-evenly h4 pb-2 mb-4 text-secondary border-bottom border-secondary strong">
-      <div id="inlineCheckbox">
-      </div>
-      <form class="d-flex" role="search" id="search-form">
-          <input class="form-control me-1" type="search" placeholder="Search" aria-label="Search">
-      </form>
-  </div>
-  <div class="d-flex flex-column justify-content-center">
-      <div class="d-flex flex-wrap justify-content-evenly" id="cardEvents">
-      </div>
-  </div>    
-</main>
+    <main class="bg-light p-0">
+      <div class="ChecksYBusqueda">
+        <div class="ChecksYBusqueda2" id ="checksID">
+        </div>
+        <div class="searchAndTxt" id="searchAndTxtID">
+          <input type="text" id="textSearch" name="">
+            <a href="#" id="botonBuscarTxt2"><img src="./Assets/incono_buscar.png" alt="icono-buscar" id="botonBuscarTxt"></a>
+        </div>
+    </div>
+    <div class="contenedorCardsHome" id="contenedorCartas">
+    </div>
+  </main>
 
     <footer>
       <div class="d-flex flex-column flex-sm-row justify-content-between py-4 my-4 border-top">
