--- a/details.html
+++ b/details.html
@@ -51,9 +51,12 @@
         </ul>
       </div>
     </header>
-    <main class="d-flex align-items-center justify-content-center py-3" id="details" >
-
-    </main>
+    <main class="bg-light p-0"> 
+      <div class="TitlePage">
+       </div>
+        <div id="cardPastEvents">
+        </div>
+      </main>
     <footer>
         <div class="d-flex flex-column flex-sm-row justify-content-between py-4 my-4 border-top">
           
